# cfr-solver

./: .gitignore  CMakeLists.txt  Makefile  Taskfile.yml
model/: __main__.py  constants.py  model.py  models.py  utils.py
src/: main.cpp
src/cards/: Card.cpp
src/cfr/: Solver.cpp  Solver.hpp
src/game/: GameState.cpp  GameState.hpp  HandEvaluator.cpp  HandEvaluator.hpp  HandHashes.cpp  HandHashes.hpp
test/: test_hand_evaluator.cpp
